err/video-brain.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/video_brain'...
Listing './lib/python3.5/site-packages/video_brain/graph_parser'...
Compiling './lib/python3.5/site-packages/video_brain/graph_parser/motion.py'...
***   File "./lib/python3.5/site-packages/video_brain/graph_parser/motion.py", line 80
    print "RGB LRCN model classified video as: %s.\n" % (labels[class_RGB_LRCN])
                                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/video_brain/graph_parser/network_evaluator.py'...
***   File "./lib/python3.5/site-packages/video_brain/graph_parser/network_evaluator.py", line 117
    print 'train iterations len: ', len(training_iterations)
                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/video_brain/graph_parser/sequence_input_layer.py'...
***   File "./lib/python3.5/site-packages/video_brain/graph_parser/sequence_input_layer.py", line 186
    print 'Outputs:', self.top_names
                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/video_brain/graph_parser/tests'...
Listing './lib/python3.5/site-packages/video_brain/video_parser'...
Listing './lib/python3.5/site-packages/video_brain/video_parser/tests'...
Listing './lib/python3.5/site-packages/video_brain-0.1.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
